# skyproOOP

./: README.md  pyproject.toml
src/: Class.py  main.py  property.py
tests/: test_Class.py  test_main.py  test_property.py
